add auth and middleware
